Add please wait swal to gamma

--- a/templates/index-new.html
+++ b/templates/index-new.html
@@ -695,7 +695,7 @@
 
             $("#gamma").click(function() {
               window.swal({
-                title: "Computing gamma...",
+                title: "Computing gamma correction...",
                 text: "Please wait"
               });
               
