--- a/templates/index-new.html
+++ b/templates/index-new.html
@@ -14,7 +14,7 @@
         <style type="text/css">
 
             .mode-button {
-              border: 4px solid black;
+              border: 4px solid #C0C0C0;
               border-radius: 10px;
               width: 150px;
               height: 100px;
@@ -35,7 +35,7 @@
 
             .icon-button {
               background: white;
-              border: 4px solid black;
+              border: 4px solid #C0C0C0;
               border-radius: 10px;
             }
 
@@ -52,14 +52,16 @@
             .box {
               width: 80%;
               padding: 20px;
-              border: 4px solid black;
+              border: 4px solid #C0C0C0;
               border-radius: 10px;
               vertical-align: center;
               font-size: 100%;
+              color: white;
             }
 
             .option-button {
-              border: 4px solid black;
+              border: 4px solid #C0C0C0;
+              color: white;
               border-radius: 10px;
               width: 60px;
               font-size: 90%;
@@ -68,15 +70,19 @@
               margin-left: 2px;
               margin-right: 2px;
               word-wrap: break-word;
+              margin-bottom: 10px;
+              width: 70px;
+              height: 40px;
             }
 
             .option-button:hover {
-              background: black;
-              color: white;
+              background: #C0C0C0;
+              color: black;
             }
 
             .operation-button {
-              border: 4px solid black;
+              border: 4px solid #C0C0C0;
+              color: white;
               border-radius: 10px;
               width: 90px;
               padding: 10px;
@@ -85,12 +91,13 @@
               background: none;
               margin-left: 2px;
               margin-right: 2px;
+              margin-bottom: 10px;
               word-wrap: break-word;
             }
 
             .operation-button:hover {
-              background: black;
-              color: white;
+              background: #C0C0C0;
+              color: black;
             }
 
             #options-box {
@@ -103,7 +110,7 @@
               width: 100px;
               word-wrap: break-word;
               background: white;
-              border: 4px solid black;
+              border: 4px solid #C0C0C0;
               border-radius: 10px;
               font-weight: bold;
               font-size: 100%;
@@ -113,7 +120,8 @@
               width: 100px;
               height: 50px;
               word-wrap: break-word;
-              border: 4px solid black;
+              border: 4px solid #C0C0C0;
+              color: white;
               border-radius: 10px;
               background: none;
               font-weight: bold;
@@ -123,26 +131,28 @@
             }
 
             .bottom-button:hover {
-              background: black;
-              color: white;
+              background: #C0C0C0;
+              color: black;
             }
 
             .toggle-button {
               background: none;
               font-weight: bold;
+              color: white;
               border: none;
               width: 100px;
               height: 42px;
               font-size: 100%;
-              border-right: 2px solid black;
-              border-left: 2px solid black;
+              border-right: 2px solid #C0C0C0;
+              border-left: 2px solid #C0C0C0;
               float: left;
               border-collapse: collapse;
             }
 
             .selected-toggle {
-              background: black;
-              color: white;
+              background: #C0C0C0;
+              outline: 0;
+              color: black;
               font-weight: bold;
               border: none;
               width: 100px;
@@ -155,7 +165,7 @@
             }
 
             #toggle {
-              border: 4px solid black;
+              border: 4px solid #C0C0C0;
               border-radius: 10px;
               margin-right: 5px;
               display: inline-block;
@@ -169,12 +179,16 @@
 
             .img-magnifier-glass {
               position: absolute;
-              border: 3px solid #000;
+              border: 3px solid #C0C0C0;
               border-radius: 50%;
               cursor: none;
               /*Set the size of the magnifier glass:*/
               width: 100px;
               height: 100px;
+            }
+
+            body {
+              background: black;
             }
 
         </style>
