Separate zeff and jaccard into separate div

--- a/templates/index-new.html
+++ b/templates/index-new.html
@@ -296,7 +296,7 @@
                 </div>
               </p>
 
-              <h3>View Options</h3>
+              <h3 style="color: white;">View Options</h3>
               <div class="box" style="margin-top: -15px;">
                 <div>
                   <div id="options-box">
@@ -316,7 +316,7 @@
                 </div>
               </div>
 
-              <h3>Operation</h3>
+              <h3 style="color: white;">Operation</h3>
               <div class="box" style="margin-top: -15px;">
                 <div>
                   <div id="options-box">
@@ -326,14 +326,16 @@
                 </div>
                 <div>
                   <div id="options-box">
-                    <button type="button" id="zeff-operation" class='operation-button'>Zeff</button>
+                    <button type="button" id="cosine-operation" class='operation-button'>Cosine</button>
                     <button type="button" id="nn-operation" class='operation-button'>NN</button>
                   </div>
                 </div>
-                <div>
+              </div>
+
+              <div class="box" style="margin-top: 10px;">
                   <div id="options-box">
                     <button type="button" id="jaccard-operation" class='operation-button'>Jaccard</button>
-                    <button type="button" id="cosine-operation" class='operation-button'>Cosine</button>
+                    <button type="button" id="zeff-operation" class='operation-button'>Zeff</button>
                   </div>
                 </div>
               </div>
@@ -347,7 +349,7 @@
           </form>
         </div>
 
-        <div style="float: left; margin-top: -280px; margin-left: 18%;">
+        <div style="float: left; margin-top: -280px; margin-left: 10%;">
           <p>
             <div id="toggle">
               <button type="button" id="zoom" class='toggle-button'>Zoom</button>
