--- a/templates/index-new.html
+++ b/templates/index-new.html
@@ -188,6 +188,10 @@
               text-align: center;
             }
 
+            #img {
+              border: 10px solid #C0C0C0;
+            }
+
         </style>
 
         <script>
