Resize the main image

--- a/templates/index-new.html
+++ b/templates/index-new.html
@@ -268,7 +268,7 @@
             <img src="{{img}}" id="img" style="width: 90%; height: 90%; float: left;">
           </div>
 
-          <form method="post" style="float: left; margin-left: 5%;">
+          <form method="post" style="float: left;">
             <div>
               <p>
                 <button type="button" id="pseudo-mode" class='mode-button'>
