--- a/templates/index-new.html
+++ b/templates/index-new.html
@@ -94,16 +94,6 @@
               justify-content: center;
             }
 
-            #manual-search {
-              width: 100px;
-              word-wrap: break-word;
-              background: white;
-              border: 4px solid #C0C0C0;
-              border-radius: 10px;
-              font-weight: bold;
-              font-size: 100%;
-            }
-
             .bottom-button {
               margin: 5px;
             }
@@ -334,7 +324,7 @@
                   <div id="options-box">
                     <button type="button" class="option-button" id="zoom"><img class="img-btn" src="{{ url_for('static', filename='new_ecil_icons/zoom.jpg') }}"></button>
                     <button type="button" class="option-button" id="nn-operation"><img class="img-btn" src="{{ url_for('static', filename='new_ecil_icons/nn.png') }}"></button>
-                    <button type="button" class="option-button" id="#"><img class="img-btn" src="{{ url_for('static', filename='new_ecil_icons/manual-search.jpg') }}"></button>
+                    <button type="button" class="option-button" id="manual-search"><img class="img-btn" src="{{ url_for('static', filename='new_ecil_icons/manual-search.jpg') }}"></button>
                   </div>
                 </div>
               </div>
@@ -483,7 +473,7 @@
             $(".option-button").click(function() {
               var option_name = $(this).attr("id");
 
-              if(option_name != "zoom")
+              if(option_name != "zoom" && option_name != "manual-search")
                 mode_request(option_name, show_please_wait=true);
             });
 
@@ -621,7 +611,7 @@
                     x2 = 0;
                     y2 = 0;
                   }
-                })
+                });
               }
             });
 
@@ -685,6 +675,73 @@
                 glass.removeAttribute("class");
               }
             });
+
+            $("#manual-search").click(function() {
+              window.swal({
+                title: "Getting results...",
+                text: "Please wait"
+              });
+
+              var filename = $("#img").attr("src");
+              var zeff = 0;
+
+              if(x1 == 0 && x2 == 0 && y1 == 0 && y2 == 0) {
+                window.swal({
+                  title: "Error!",
+                  text: "Select an area"
+                });
+              } else {
+                var height_ratio = height / 512;
+                var width_ratio = width / 640;
+                var scaled_x1 = x1 / height_ratio;
+                var scaled_y1 = y1 / width_ratio;
+
+                $.ajax({
+                  url: "/zeff",
+                  type: "post",
+                  dataType: "json",
+                  data: {x1: scaled_x1, x2: x2, y1: scaled_y1, y2: y2, filename: filename},
+                  success: function(result) {
+                    zeff = result.zeff;
+                    x1 = 0;
+                    x2 = 0;
+                    y1 = 0;
+                    y2 = 0;
+                  }
+                });
+
+                $.ajax({
+                  url: "/jaccard",
+                  type: "post",
+                  dataType: "json",
+                  data: {x1: scaled_x1, x2: x2, y1: scaled_y1, y2: y2, filename: filename},
+                  success: function(result) {
+                    var playing_alarm_sound = false;
+                    if(result.max_type != "organic" && result.max_type != "") {
+                      play_warning_audio();
+                      playing_alarm_sound = true;
+                    }
+
+                    $ias.cancelSelection();
+                    window.swal({
+                      icon: result.icon,
+                      title: "Result",
+                      text: result.status + ", Zeff = " + zeff,
+                    }).then(function() {
+                      if(playing_alarm_sound) {
+                        stop_warning_audio();
+                      }
+                    });
+                    x1 = 0;
+                    y1 = 0;
+                    x2 = 0;
+                    y2 = 0;
+                  }
+                });
+              } 
+              
+              
+            })
 
             $("#gamma").click(function() {
               window.swal({
